# py-signal-temporal-logic

./: LICENSE  README.md  pyproject.toml
stl/: __init__.py  stl.py
tests/: test_stl.py
