[tool.poetry]
name = "py-stl"
version = "0.1.0"
description = "Wrapper on metric-temporal-logic to implement signal temporal logic."
repository = "https://github.com/mvcisback/py-signal-temporal-logic"
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"
packages = [
    { include = "stl" },
]

[tool.poetry.dependencies]
python = "^3.9"
metric-temporal-logic = "^0.4.0"
sympy = "^1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-flake8 = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
